# langgraph-linkedin-rss-post-generator-backend

./: .gitignore  README.md  linkedin_post.txt  pyproject.toml  taskfile.sh
src/: linkedin_post.txt  main.py  models.py  nodes.py  state.py  tools.py
tests/: test_workflow.py
